2016-01-22 - 1.2.0:
 - Use new Ubuntu base image.
 - Consul template and envconsul support added

2016-01-04 - 1.1.1:
 - Bump to HAproxy 1.6.3-1ppa1~trusty

2015-12-26 - 1.1.0:
 - Switch to using HAproxy 1.6.x (adds lua support)

2015-12-24 - 1.0.3:
 - Use Ubuntu base 1.0.3
 - adjust for logrotate syntax change

2015-11-23 - 1.0.2:
 - Bump Bamboo release to 0.2.15
 - Add logrotate support
 - Add iptables clean up script
 - Shorted startsec in supervisorconf to remove erroneous 'CRIT reaped unknown pid xxx' error

2015-11-07 - 1.0.1:
 - Bump HAproxy to version 1.5.15-1ppa1~trusty